hphp/hack/test/typecheck/references/pass_by_ref/reffiness_mismatch4.php.exp
File "reffiness_mismatch4.php", line 4, characters 21-21:
A type specifier is expected here. (Parsing[1002])
File "reffiness_mismatch4.php", line 4, characters 21-21:
Encountered unexpected text '&', was expecting a type hint. (Parsing[1002])
