hphp/hack/test/typecheck/references/pass_by_ref/reffiness_mismatch4.php
<?hh

interface A {
  public function f(&$x);
}

class B implements A {
  public function f($x) {}
}
